# ccm-edgevision-starter-kit

./: .gitignore  CMakeLists.txt  README.md  build_linux.sh  build_windows.bat
configs/: zones.yaml
dashboard/: app.py
docker/: Dockerfile
include/: config.hpp  detector.hpp  overlay_renderer.hpp  tracker.hpp
scripts/: benchmark_fps.py
src/: camera_input.cpp  config.cpp  detector.cpp  main.cpp  overlay_renderer.cpp  test_camera.cpp  test_camera_windows.cpp  tracker.cpp
